# Weather-app

./: .gitignore  LICENSE  README.md
docs/: index.html  weather_app.js
weather_app/: CMakeLists.txt  CurrentView.qml  ForecastView.qml  Main.qml  Next12hView.qml  datafetcher.cpp  datafetcher.h  main.cpp  resources.qrc
